# connect-farm-ml-api

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/routes/: contextRoutes.py
src/services/: context.py
